change regression ptabular target range

--- a/notebooks/Add_run_elements_default.ipynb
+++ b/notebooks/Add_run_elements_default.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 52,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 53,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,8 @@
     "            \"early_stopping\": True,\n",
     "            \"shuffle\": True,\n",
     "            \"validation_fraction\": 0.15,\n",
-    "            \"early_stopping_patience\": 5},\n",
+    "            \"early_stopping_patience\": 5,\n",
+    "                \"precision\": 16},\n",
     "            \"batch_size\": [128],\n",
     "            \"hidden_size\": [4096],\n",
     "            \"optimizer_fn\": {\n",
@@ -66,7 +67,8 @@
     "            \"early_stopping\": True,\n",
     "            \"shuffle\": True,\n",
     "            \"validation_fraction\": 0.15,\n",
-    "            \"early_stopping_patience\": 5},\n",
+    "            \"early_stopping_patience\": 5,\n",
+    "                \"precision\": 16},\n",
     "            \"batch_size\": [1024],\n",
     "            \"hidden_size\": [4096],\n",
     "            \"optimizer_fn\": {\n",
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 54,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -128,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 55,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -160,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 56,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -194,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 57,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -204,7 +206,8 @@
     "                \"auto_lr_find\": True,\n",
     "                \"max_epochs\": 1000,\n",
     "                \"val_size\": 0.15,\n",
-    "                \"early_stopping_patience\": 5},\n",
+    "                \"early_stopping_patience\": 5,\n",
+    "                \"precision\": 16},\n",
     "\n",
     "\"batch_size\": [1024],\n",
     "    \n",
@@ -220,7 +223,8 @@
     "                \"auto_lr_find\": True,\n",
     "                \"max_epochs\": 1000,\n",
     "                \"val_size\": 0.15,\n",
-    "                \"early_stopping_patience\": 5},\n",
+    "                \"early_stopping_patience\": 5,\n",
+    "                \"precision\": 16},\n",
     "\n",
     "\"batch_size\": [128],\n",
     "    \n",
@@ -242,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 58,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -252,7 +256,8 @@
     "                \"auto_lr_find\": True,\n",
     "                \"max_epochs\": 1000,\n",
     "                \"val_size\": 0.15,\n",
-    "                \"early_stopping_patience\": 5},\n",
+    "                \"early_stopping_patience\": 5,\n",
+    "                \"precision\": 16},\n",
     "\n",
     "\"batch_size\": [1024],\n",
     "    \n",
@@ -269,7 +274,8 @@
     "                \"auto_lr_find\": True,\n",
     "                \"max_epochs\": 1000,\n",
     "                \"val_size\": 0.15,\n",
-    "                \"early_stopping_patience\": 5},\n",
+    "                \"early_stopping_patience\": 5,\n",
+    "                \"precision\": 16},\n",
     "\n",
     "\"batch_size\": [128],\n",
     "    \n",
@@ -291,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 59,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -301,7 +307,8 @@
     "                \"auto_lr_find\": True,\n",
     "                \"max_epochs\": 1000,\n",
     "                \"val_size\": 0.15,\n",
-    "                \"early_stopping_patience\": 5},\n",
+    "                \"early_stopping_patience\": 5,\n",
+    "                \"precision\": 16},\n",
     "\n",
     "\"batch_size\": [1024],\n",
     "    \n",
@@ -317,7 +324,8 @@
     "                \"auto_lr_find\": True,\n",
     "                \"max_epochs\": 1000,\n",
     "                \"val_size\": 0.15,\n",
-    "                \"early_stopping_patience\": 5},\n",
+    "                \"early_stopping_patience\": 5,\n",
+    "                \"precision\": 16},\n",
     "\n",
     "\"batch_size\": [128],\n",
     "    \n",
@@ -338,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 60,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -348,7 +356,8 @@
     "                \"auto_lr_find\": True,\n",
     "                \"max_epochs\": 1000,\n",
     "                \"val_size\": 0.15,\n",
-    "                \"early_stopping_patience\": 5},\n",
+    "                \"early_stopping_patience\": 5,\n",
+    "                \"precision\": 16},\n",
     "\n",
     "\"batch_size\": [1024],\n",
     "    \n",
@@ -364,7 +373,8 @@
     "                \"auto_lr_find\": True,\n",
     "                \"max_epochs\": 1000,\n",
     "                \"val_size\": 0.15,\n",
-    "                \"early_stopping_patience\": 5},\n",
+    "                \"early_stopping_patience\": 5,\n",
+    "                \"precision\": 16},\n",
     "\n",
     "\"batch_size\": [128],\n",
     "    \n",
@@ -386,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 61,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -396,7 +406,8 @@
     "                \"auto_lr_find\": True,\n",
     "                \"max_epochs\": 1000,\n",
     "                \"val_size\": 0.15,\n",
-    "                \"early_stopping_patience\": 5},\n",
+    "                \"early_stopping_patience\": 5,\n",
+    "                \"precision\": 16},\n",
     "\n",
     "\"batch_size\": [1024],\n",
     "    \n",
@@ -412,7 +423,8 @@
     "                \"auto_lr_find\": True,\n",
     "                \"max_epochs\": 1000,\n",
     "                \"val_size\": 0.15,\n",
-    "                \"early_stopping_patience\": 5},\n",
+    "                \"early_stopping_patience\": 5,\n",
+    "                \"precision\": 16},\n",
     "\n",
     "\"batch_size\": [128],\n",
     "    \n",
@@ -434,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 62,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -444,7 +456,8 @@
     "                \"auto_lr_find\": True,\n",
     "                \"max_epochs\": 1000,\n",
     "                \"val_size\": 0.15,\n",
-    "                \"early_stopping_patience\": 5},\n",
+    "                \"early_stopping_patience\": 5,\n",
+    "                \"precision\": 16},\n",
     "\n",
     "\"batch_size\": [1024],\n",
     "    \n",
@@ -460,7 +473,8 @@
     "                \"auto_lr_find\": True,\n",
     "                \"max_epochs\": 1000,\n",
     "                \"val_size\": 0.15,\n",
-    "                \"early_stopping_patience\": 5},\n",
+    "                \"early_stopping_patience\": 5,\n",
+    "                \"precision\": 16},\n",
     "\n",
     "\"batch_size\": [128],\n",
     "    \n",
@@ -482,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 63,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -492,7 +506,8 @@
     "                \"auto_lr_find\": True,\n",
     "                \"max_epochs\": 1000,\n",
     "                \"val_size\": 0.15,\n",
-    "                \"early_stopping_patience\": 5},\n",
+    "                \"early_stopping_patience\": 5,\n",
+    "                \"precision\": 16},\n",
     "\n",
     "\"batch_size\": [1024],\n",
     "    \n",
@@ -507,7 +522,8 @@
     "                \"auto_lr_find\": True,\n",
     "                \"max_epochs\": 1000,\n",
     "                \"val_size\": 0.15,\n",
-    "                \"early_stopping_patience\": 5},\n",
+    "                \"early_stopping_patience\": 5,\n",
+    "                \"precision\": 16},\n",
     "\n",
     "\"batch_size\": [128],\n",
     "    \n",
@@ -529,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 64,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -539,7 +555,8 @@
     "                \"auto_lr_find\": True,\n",
     "                \"max_epochs\": 1000,\n",
     "                \"val_size\": 0.15,\n",
-    "                \"early_stopping_patience\": 5},\n",
+    "                \"early_stopping_patience\": 5,\n",
+    "                \"precision\": 16},\n",
     "\n",
     "\"batch_size\": [1024],\n",
     "    \n",
@@ -555,7 +572,8 @@
     "                \"auto_lr_find\": True,\n",
     "                \"max_epochs\": 1000,\n",
     "                \"val_size\": 0.15,\n",
-    "                \"early_stopping_patience\": 5},\n",
+    "                \"early_stopping_patience\": 5,\n",
+    "                \"precision\": 16},\n",
     "\n",
     "\"batch_size\": [128],\n",
     "    \n",
@@ -576,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 65,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -615,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 66,
    "id": "6f496023",
    "metadata": {},
    "outputs": [],
@@ -738,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 67,
    "id": "ff2d04ed-e7d7-41f0-9c95-be55d5eed23d",
    "metadata": {},
    "outputs": [],
@@ -790,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 68,
    "id": "3eb19cf8-c505-4067-bf9f-0ac064591f85",
    "metadata": {},
    "outputs": [
@@ -804,13 +822,14 @@
        "    'auto_lr_find': True,\n",
        "    'max_epochs': 1000,\n",
        "    'val_size': 0.15,\n",
-       "    'early_stopping_patience': 5},\n",
+       "    'early_stopping_patience': 5,\n",
+       "    'precision': 16},\n",
        "   'batch_size': [1024],\n",
        "   'optimizer_fn': {'Adam': {'weight_decay': [0.0], 'learning_rate': [0.001]}},\n",
        "   'scheduler_fn': {'ReduceLROnPlateau': {'factor': [0.1], 'patience': [5]}}}}]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 69,
    "id": "ea316817-8f1d-4ab8-a20e-142e5fdca39f",
    "metadata": {},
    "outputs": [
@@ -952,10 +971,12 @@
        " 'breastcancer/catboost': 294.4998846054077,\n",
        " 'covertype/gate': 4325.894627571106,\n",
        " 'covertype/fttransformer': 8873.424674987793,\n",
-       " 'covertype/categoryembedding': 705.877010345459}"
+       " 'covertype/categoryembedding': 705.877010345459,\n",
+       " 'creditcard/categoryembedding': 1288.6874544620514,\n",
+       " 'creditcard/gandalf': 3792.96079826355}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -973,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 70,
    "id": "c384ffce-22ed-4fdd-91e7-65a38e3f8ef5",
    "metadata": {},
    "outputs": [
@@ -1008,7 +1029,7 @@
        " 'diabetes/catboost']"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1028,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 71,
    "id": "eb575f12-a06b-435a-b351-57fedd678560",
    "metadata": {},
    "outputs": [
@@ -1055,10 +1076,12 @@
        " 'diabetes/catboost': 353.6942434310913,\n",
        " 'creditcard/autoint': 513.1119918823242,\n",
        " 'creditcard/tabtransformer': 459.1066381931305,\n",
-       " 'creditcard/catboost': 83.85805225372314}"
+       " 'creditcard/catboost': 83.85805225372314,\n",
+       " 'creditcard/categoryembedding': 1288.6874544620514,\n",
+       " 'creditcard/gandalf': 3792.96079826355}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 72,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
@@ -1093,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 73,
    "id": "a573e6c6-0463-479b-ae6a-f6ac55bb50d1",
    "metadata": {},
    "outputs": [],
@@ -1108,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 74,
    "id": "16c04bb4-1c80-4e65-9ad8-d3fc6698c34e",
    "metadata": {},
    "outputs": [],
