--- a/notebooks/Add_run_elements_default.ipynb
+++ b/notebooks/Add_run_elements_default.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 47,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 48,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
     "s1dcnn_small_default_grid =  {\n",
     "        \"outer_params\": {\n",
     "            \"hyperopt_evals\":1,\n",
-    "            \"max_epochs\": 1,\n",
+    "            \"max_epochs\": 1000,\n",
     "            \"early_stopping\": True,\n",
     "            \"shuffle\": True,\n",
     "            \"validation_fraction\": 0.15,\n",
@@ -63,7 +63,7 @@
     "s1dcnn_large_default_grid =  {\n",
     "        \"outer_params\": {\n",
     "            \"hyperopt_evals\":1,\n",
-    "            \"max_epochs\": 1,\n",
+    "            \"max_epochs\": 1000,\n",
     "            \"early_stopping\": True,\n",
     "            \"shuffle\": True,\n",
     "            \"validation_fraction\": 0.15,\n",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 49,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 50,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 51,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 52,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 53,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 54,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 55,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 56,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 57,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 58,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 59,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 60,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 61,
    "id": "6f496023",
    "metadata": {},
    "outputs": [],
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 62,
    "id": "ff2d04ed-e7d7-41f0-9c95-be55d5eed23d",
    "metadata": {},
    "outputs": [],
@@ -771,8 +771,18 @@
     "            ]\n",
     "\n",
     "templates3 =[\n",
-    "generate_model_template(\"creditcard\",\"fttransformer\", param_grid = fttransformer_large_default_grid.copy()),\n",
-    "            ]\n",
+    "    generate_model_template(\"housing\",\"s1dcnn\", param_grid = s1dcnn_large_default_grid.copy()),\n",
+    "    generate_model_template(\"adult\",\"s1dcnn\", param_grid = s1dcnn_large_default_grid.copy()),\n",
+    "    generate_model_template(\"covertype\",\"s1dcnn\", param_grid = s1dcnn_large_default_grid.copy()),\n",
+    "    generate_model_template(\"heloc\",\"s1dcnn\", param_grid = s1dcnn_large_default_grid.copy()),\n",
+    "    generate_model_template(\"diabetes\",\"s1dcnn\", param_grid = s1dcnn_large_default_grid.copy()),\n",
+    "    generate_model_template(\"titanic\",\"s1dcnn\", param_grid = s1dcnn_small_default_grid.copy()),\n",
+    "    generate_model_template(\"iris\",\"s1dcnn\", param_grid = s1dcnn_small_default_grid.copy()),\n",
+    "    generate_model_template(\"breastcancer\",\"s1dcnn\", param_grid = s1dcnn_small_default_grid.copy()),\n",
+    "    generate_model_template(\"ageconditions\",\"s1dcnn\", param_grid = s1dcnn_small_default_grid.copy()),\n",
+    "    generate_model_template(\"creditcard\",\"s1dcnn\", param_grid = s1dcnn_large_default_grid.copy()),\n",
+    "    \n",
+    "]\n",
     "\n",
     "\n",
     "templates4 = [\n",
@@ -808,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 63,
    "id": "3eb19cf8-c505-4067-bf9f-0ac064591f85",
    "metadata": {},
    "outputs": [
@@ -829,7 +839,7 @@
        "   'scheduler_fn': {'ReduceLROnPlateau': {'factor': [0.1], 'patience': [5]}}}}]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 64,
    "id": "ea316817-8f1d-4ab8-a20e-142e5fdca39f",
    "metadata": {},
    "outputs": [
@@ -973,10 +983,11 @@
        " 'covertype/fttransformer': 8873.424674987793,\n",
        " 'covertype/categoryembedding': 705.877010345459,\n",
        " 'creditcard/categoryembedding': 1288.6874544620514,\n",
-       " 'creditcard/gandalf': 3792.96079826355}"
+       " 'creditcard/gandalf': 3792.96079826355,\n",
+       " 'creditcard/fttransformer': 10715.021805286407}"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -994,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 65,
    "id": "c384ffce-22ed-4fdd-91e7-65a38e3f8ef5",
    "metadata": {},
    "outputs": [
@@ -1029,7 +1040,7 @@
        " 'diabetes/catboost']"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 66,
    "id": "eb575f12-a06b-435a-b351-57fedd678560",
    "metadata": {},
    "outputs": [
@@ -1078,10 +1089,11 @@
        " 'creditcard/tabtransformer': 459.1066381931305,\n",
        " 'creditcard/catboost': 83.85805225372314,\n",
        " 'creditcard/categoryembedding': 1288.6874544620514,\n",
-       " 'creditcard/gandalf': 3792.96079826355}"
+       " 'creditcard/gandalf': 3792.96079826355,\n",
+       " 'creditcard/fttransformer': 10715.021805286407}"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1101,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 67,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
@@ -1116,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 68,
    "id": "a573e6c6-0463-479b-ae6a-f6ac55bb50d1",
    "metadata": {},
    "outputs": [],
@@ -1131,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 69,
    "id": "16c04bb4-1c80-4e65-9ad8-d3fc6698c34e",
    "metadata": {},
    "outputs": [],
