structure for public repo changes

--- a/notebooks/Add_run_elements_default.ipynb
+++ b/notebooks/Add_run_elements_default.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 14,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 15,
    "id": "6f496023",
    "metadata": {},
    "outputs": [],
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 16,
    "id": "ff2d04ed-e7d7-41f0-9c95-be55d5eed23d",
    "metadata": {},
    "outputs": [],
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 17,
    "id": "3eb19cf8-c505-4067-bf9f-0ac064591f85",
    "metadata": {},
    "outputs": [
@@ -839,7 +839,7 @@
        "   'scheduler_fn': {'ReduceLROnPlateau': {'factor': [0.1], 'patience': [5]}}}}]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 18,
    "id": "ea316817-8f1d-4ab8-a20e-142e5fdca39f",
    "metadata": {},
    "outputs": [
@@ -867,7 +867,7 @@
       "text/plain": [
        "{'titanic/xgb': 0.8589644432067871,\n",
        " 'titanic/catboost': 31.50035524368286,\n",
-       " 'titanic/s1dcnn': 1.7213973999023438,\n",
+       " 'titanic/s1dcnn': 85.95827889442444,\n",
        " 'titanic/mlp': 0.6242845058441162,\n",
        " 'titanic/tabnet': 43.0797176361084,\n",
        " 'titanic/gate': 261.26929807662964,\n",
@@ -878,7 +878,7 @@
        " 'titanic/tabtransformer': 40.36361908912659,\n",
        " 'housing/xgb': 3.364003419876098,\n",
        " 'housing/mlp': 45.612706422805786,\n",
-       " 'housing/s1dcnn': 5.777416467666626,\n",
+       " 'housing/s1dcnn': 543.0704627037048,\n",
        " 'housing/tabnet': 319.87358140945435,\n",
        " 'housing/gate': 1054.847452878952,\n",
        " 'housing/fttransformer': 432.6749892234802,\n",
@@ -889,7 +889,7 @@
        " 'housing/catboost': 19.411662817001343,\n",
        " 'iris/xgb': 1.4646930694580078,\n",
        " 'iris/mlp': 0.0967371463775634,\n",
-       " 'iris/s1dcnn': 0.2426009178161621,\n",
+       " 'iris/s1dcnn': 159.45245814323425,\n",
        " 'iris/tabnet': 21.590144157409668,\n",
        " 'iris/gate': 181.5618627071381,\n",
        " 'iris/fttransformer': 31.295512914657596,\n",
@@ -900,7 +900,7 @@
        " 'iris/catboost': 5.277928352355957,\n",
        " 'adult/xgb': 7.5718700885772705,\n",
        " 'adult/mlp': 13.90877890586853,\n",
-       " 'adult/s1dcnn': 12.902290105819702,\n",
+       " 'adult/s1dcnn': 231.11647534370425,\n",
        " 'adult/tabnet': 398.8988385200501,\n",
        " 'adult/gate': 1563.9778861999512,\n",
        " 'adult/fttransformer': 363.2745237350464,\n",
@@ -909,32 +909,20 @@
        " 'adult/autoint': 208.98531913757324,\n",
        " 'adult/tabtransformer': 1211.3297078609469,\n",
        " 'adult/catboost': 76.92746090888977,\n",
-       " 'heloc/xgb': 1.981088399887085,\n",
-       " 'heloc/mlp': 3.169528007507324,\n",
-       " 'heloc/s1dcnn': 2.9111969470977783,\n",
-       " 'heloc/tabnet': 80.53077173233032,\n",
-       " 'heloc/gate': 286.91103625297546,\n",
-       " 'heloc/fttransformer': 252.11071848869324,\n",
-       " 'heloc/categoryembedding': 23.87702465057373,\n",
-       " 'heloc/gandalf': 38.07006430625916,\n",
-       " 'heloc/autoint': 31.93078875541687,\n",
-       " 'heloc/tabtransformer': 26.433207750320435,\n",
-       " 'heloc/catboost': 24.82707381248474,\n",
        " 'covertype/xgb': 4381.222403526306,\n",
        " 'covertype/mlp': 1473.7813651561737,\n",
        " 'housing/resnet': 639.8152673244476,\n",
        " 'adult/resnet': 909.7866032123566,\n",
-       " 'heloc/resnet': 219.24883842468265,\n",
        " 'creditcard/xgb': 313.9121091365814,\n",
        " 'diabetes/xgb': 355.15988636016846,\n",
        " 'creditcard/mlp': 77.6291835308075,\n",
        " 'diabetes/mlp': 58.441378355026245,\n",
        " 'diabetes/resnet': 3681.2359352111816,\n",
-       " 'diabetes/s1dcnn': 36.27701234817505,\n",
+       " 'diabetes/s1dcnn': 405.7825314998626,\n",
        " 'diabetes/tabnet': 453.4024243354797,\n",
        " 'diabetes/gate': 1246.7368049621582,\n",
        " 'creditcard/resnet': 2291.049815416336,\n",
-       " 'creditcard/s1dcnn': 128.48831725120544,\n",
+       " 'creditcard/s1dcnn': 915.53058052063,\n",
        " 'creditcard/tabnet': 1305.791773557663,\n",
        " 'diabetes/fttransformer': 2329.688283681869,\n",
        " 'diabetes/categoryembedding': 233.2397403717041,\n",
@@ -946,7 +934,7 @@
        " 'ageconditions/xgb': 79.63433504104614,\n",
        " 'ageconditions/mlp': 1.1569457054138184,\n",
        " 'ageconditions/resnet': 35.177343130111694,\n",
-       " 'ageconditions/s1dcnn': 0.9593653678894044,\n",
+       " 'ageconditions/s1dcnn': 70.84593367576599,\n",
        " 'ageconditions/tabnet': 36.57884454727173,\n",
        " 'ageconditions/gate': 283.6484577655792,\n",
        " 'ageconditions/fttransformer': 66.10692095756531,\n",
@@ -958,7 +946,7 @@
        " 'breastcancer/xgb': 81.45734024047852,\n",
        " 'breastcancer/mlp': 8.704363822937012,\n",
        " 'breastcancer/resnet': 193.40289878845212,\n",
-       " 'breastcancer/s1dcnn': 9.247423887252808,\n",
+       " 'breastcancer/s1dcnn': 75.11441373825073,\n",
        " 'breastcancer/tabnet': 41.24340105056763,\n",
        " 'iris/resnet': 308.17779779434204,\n",
        " 'titanic/resnet': 173.7827513217926,\n",
@@ -972,7 +960,7 @@
        " 'breastcancer/categoryembedding': 21.528392553329468,\n",
        " 'covertype/autoint': 643.4551923274994,\n",
        " 'breastcancer/gandalf': 35.30182480812073,\n",
-       " 'covertype/s1dcnn': 102.22564435005188,\n",
+       " 'covertype/s1dcnn': 3585.93523979187,\n",
        " 'breastcancer/autoint': 15.269878149032593,\n",
        " 'breastcancer/tabtransformer': 12.69769525527954,\n",
        " 'creditcard/autoint': 513.1119918823242,\n",
@@ -987,7 +975,7 @@
        " 'creditcard/fttransformer': 10715.021805286407}"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 19,
    "id": "c384ffce-22ed-4fdd-91e7-65a38e3f8ef5",
    "metadata": {},
    "outputs": [
@@ -1040,7 +1028,7 @@
        " 'diabetes/catboost']"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 20,
    "id": "eb575f12-a06b-435a-b351-57fedd678560",
    "metadata": {},
    "outputs": [
@@ -1072,11 +1060,11 @@
        " 'creditcard/mlp': 77.6291835308075,\n",
        " 'diabetes/mlp': 58.441378355026245,\n",
        " 'diabetes/resnet': 3681.2359352111816,\n",
-       " 'diabetes/s1dcnn': 36.27701234817505,\n",
+       " 'diabetes/s1dcnn': 405.7825314998626,\n",
        " 'diabetes/tabnet': 453.4024243354797,\n",
        " 'diabetes/gate': 1246.7368049621582,\n",
        " 'creditcard/resnet': 2291.049815416336,\n",
-       " 'creditcard/s1dcnn': 128.48831725120544,\n",
+       " 'creditcard/s1dcnn': 915.53058052063,\n",
        " 'creditcard/tabnet': 1305.791773557663,\n",
        " 'diabetes/fttransformer': 2329.688283681869,\n",
        " 'diabetes/categoryembedding': 233.2397403717041,\n",
@@ -1093,7 +1081,7 @@
        " 'creditcard/fttransformer': 10715.021805286407}"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1106,21 +1094,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16ad380b-2189-45ca-98d6-98ab416cdf3a",
+   "id": "0316dbcd-96b7-4ccb-91c5-909036b8411d",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 21,
+   "id": "16ad380b-2189-45ca-98d6-98ab416cdf3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "templates4 = [\n",
+    "generate_model_template(\"heloc\",\"xgb\",param_grid = xgb_large_default_grid.copy()),\n",
+    "generate_model_template(\"heloc\", \"mlp\",  param_grid = mlp_large_default_grid.copy()),\n",
+    "generate_model_template(\"heloc\", \"resnet\", param_grid = resnet_large_default_grid.copy()),\n",
+    "generate_model_template(\"heloc\", \"s1dcnn\", param_grid = s1dcnn_large_default_grid.copy()),\n",
+    "generate_model_template(\"heloc\", \"tabnet\",param_grid = tabnet_large_default_grid.copy()),\n",
+    "generate_model_template(\"heloc\", \"gate\", param_grid = gate_large_default_grid.copy()),\n",
+    "generate_model_template(\"heloc\",\"fttransformer\", param_grid = fttransformer_large_default_grid.copy()),\n",
+    "generate_model_template(\"heloc\", \"categoryembedding\", param_grid = catembed_large_default_grid.copy()),\n",
+    "generate_model_template(\"heloc\",\"gandalf\", param_grid = gandalf_large_default_grid.copy()),\n",
+    "generate_model_template(\"heloc\",\"node\", param_grid = node_large_default_grid.copy()),\n",
+    "generate_model_template(\"heloc\",\"autoint\", param_grid = autoint_large_default_grid.copy()),\n",
+    "generate_model_template(\"heloc\",\"tabtransformer\", param_grid = tabtransformer_large_default_grid.copy()),\n",
+    "generate_model_template(\"heloc\",\"catboost\", param_grid = catboost_large_default_grid.copy()),\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a dictionary with the \"runs\" key and the list of dictionaries\n",
-    "runs_dict = {\"runs\": templates1}\n",
-    "\n",
     "# write the dictionary to a YAML file\n",
     "with open(\"../configuration/experiment_runs1.yml\", \"w\") as f:\n",
     "    yaml.dump(templates1, f, sort_keys = False, default_flow_style=False)"
@@ -1128,14 +1137,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 23,
    "id": "a573e6c6-0463-479b-ae6a-f6ac55bb50d1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a dictionary with the \"runs\" key and the list of dictionaries\n",
-    "runs_dict = {\"runs\": templates2}\n",
-    "\n",
     "# write the dictionary to a YAML file\n",
     "with open(\"../configuration/experiment_runs2.yml\", \"w\") as f:\n",
     "    yaml.dump(templates2, f, sort_keys = False, default_flow_style=False)"
@@ -1143,17 +1149,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 24,
+   "id": "4e38f37f-b49d-439c-9def-0565975a7cc4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write the dictionary to a YAML file\n",
+    "with open(\"../configuration/experiment_runs3.yml\", \"w\") as f:\n",
+    "    yaml.dump(templates3, f, sort_keys = False, default_flow_style=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "16c04bb4-1c80-4e65-9ad8-d3fc6698c34e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a dictionary with the \"runs\" key and the list of dictionaries\n",
-    "runs_dict = {\"runs\": templates3}\n",
-    "\n",
     "# write the dictionary to a YAML file\n",
-    "with open(\"../configuration/experiment_runs3.yml\", \"w\") as f:\n",
-    "    yaml.dump(templates3, f, sort_keys = False, default_flow_style=False)"
+    "with open(\"../configuration/experiment_runs4.yml\", \"w\") as f:\n",
+    "    yaml.dump(templates4, f, sort_keys = False, default_flow_style=False)"
    ]
   },
   {
